fixed wrapping for mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     /* background-color: #003049; */
 
 	background: linear-gradient(-45deg,  	
-    #03045e, #0077b6, #48cae4, #fab3a9);
+    #1d3557, #457b9d, #ffe8d6);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
@@ -71,7 +71,7 @@ a:link, a:visited {
     font-size: 2rem;
     color: #ffae00;
     text-decoration: none;   
-    text-shadow: 0.1rem 0.1rem 0.5rem #1d1d1d;
+    text-shadow: 0.1rem 0.05rem 0.2rem #1d3557;
 }
 
 a:hover {
@@ -112,6 +112,7 @@ header {
 .main-title {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .cloudberry {
